network policy/networkpolicy-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-backend
  namespace: banking
spec:
  podSelector:
    matchLabels:
      app: backend-deployment

  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx

    ports:
    - protocol: TCP
      port: 8000
