network policy/networkpolicy-elasticsearch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-fluentd-to-elasticsearch
  namespace: banking
spec:
  podSelector:
    matchLabels:
      app: elasticsearch

  policyTypes:
  - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: fluentd

    ports:
    - protocol: TCP
      port: 9200
