network policy/networkpolicy-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-controller-frontend
  namespace: banking
spec:
  podSelector:
    matchLabels:
      app: frontend-deployment

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx

    ports:
    - protocol: TCP
      port: 80
